5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1593_2425.log
== TEST (2019-04-01 21:56:17) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
cm = d / cg
print(round(cm, 3)km/l)

-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:56:38) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
cm = d / cg
print(round(cm, 3)

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:57:43) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = (d)/cg
print(round(cm, 3)

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:57:45) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = (d)/cg
print(round(cm, 3)

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:57:53) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = (d)/cg
print(round(cm, 3)km/l)

-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:58:00) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
print(round(cm, 3)km/l)

-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)km/l)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:58:18) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
print(round(cm, 3), km/l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3), km/l)
NameError: name 'cm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:58:37) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
print(round(consumo, 3), km/l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3), km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:59:12) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
km/l = km/l
print(round(consumo, 3), km/l)

-- ERROR:
File "XXXX", line 4
    km/l = km/l
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:59:24) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
km = km/l
print(round(consumo, 3), km)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    km = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:59:56) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
print(round(consumo, 3), "km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:00:02) 
-- CODE:
d = float(input("Distancia : "))
cg = float(input("Combustivel Gasto : "))
consumo = d/cg
print(round(consumo, 3), "km/l")

-- EXECUTION TIME:
0.147949
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
